# department-api

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
department/: admin.py  models.py  serializers.py  urls.py  views.py
department/migrations/: 0001_initial.py
department/tests/: test_api.py  test_serializers.py
scripts/: init-user-db.sh
